[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/storymusic.gd" type="Script" id=1]
[ext_resource path="res://scripts/music setting.gd" type="Script" id=2]

[node name="game_audio" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="music" type="AudioStreamPlayer" parent="."]
bus = "Music"

[node name="GridContainer" type="GridContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Setting1" type="VBoxContainer" parent="GridContainer"]
margin_right = 1280.0
margin_bottom = 38.0
size_flags_horizontal = 3
script = ExtResource( 2 )
label = "Music"
audio_stream_player_path = NodePath("../../music")
bus_name = "Music"

[node name="Label" type="Label" parent="GridContainer/Setting1"]
margin_right = 1280.0
margin_bottom = 14.0
text = "Volume"

[node name="HSlider" type="HSlider" parent="GridContainer/Setting1"]
margin_top = 18.0
margin_right = 1280.0
margin_bottom = 34.0
size_flags_vertical = 4
min_value = -25.0
max_value = 0.0

[node name="Buttons" type="HBoxContainer" parent="GridContainer/Setting1"]
margin_top = 38.0
margin_right = 1280.0
margin_bottom = 38.0

[node name="Play" type="Button" parent="GridContainer/Setting1/Buttons"]
visible = false
margin_right = 638.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Play"

[node name="Mute" type="Button" parent="GridContainer/Setting1/Buttons"]
visible = false
margin_right = 1280.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Mute"

[connection signal="value_changed" from="GridContainer/Setting1/HSlider" to="GridContainer/Setting1" method="_on_HSlider_value_changed"]
[connection signal="pressed" from="GridContainer/Setting1/Buttons/Play" to="GridContainer/Setting1" method="_on_Play_pressed"]
[connection signal="pressed" from="GridContainer/Setting1/Buttons/Mute" to="GridContainer/Setting1" method="_on_Mute_pressed"]
